--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,27 +8,27 @@
                 </li>
                 <li>
                     <a routerLink="/component/accordion" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-equal"></i><span class="hide-menu">Event Hub</span></a>
+                            class="mdi mdi-home-map-marker"></i><span class="hide-menu">Event Hub</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/alert" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-message-bulleted"></i><span class="hide-menu">Decorations</span></a>
+                            class="mdi mdi-bow-tie"></i><span class="hide-menu">Decorations</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/carousel" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-view-carousel"></i><span class="hide-menu">Camera & Video</span></a>
+                            class="mdi mdi-video"></i><span class="hide-menu">Camera & Video</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/dropdown" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-arrange-bring-to-front"></i><span class="hide-menu">Food & Beverages</span></a>
+                            class="mdi mdi-food"></i><span class="hide-menu">Food & Beverages</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/modal" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-tablet"></i><span class="hide-menu">Travels</span></a>
+                            class="mdi mdi-taxi"></i><span class="hide-menu">Travels</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/pagination" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
-                            class="mdi mdi-backburger"></i><span class="hide-menu">Entrtainment</span></a>
+                            class="mdi mdi-music-circle"></i><span class="hide-menu">Entrtainment</span></a>
                 </li>
                 <li>
                     <a routerLink="/component/poptool" (click)="addExpandClass('component')" [routerLinkActive]="['router-link-active']"><i
@@ -70,11 +70,11 @@
     <!-- Bottom points-->
     <div class="sidebar-footer">
         <!-- item-->
-        <a href="" class="link" data-toggle="tooltip" title="Settings"><i class="ti-settings"></i></a>
+        <a href="" class="link" data-toggle="tooltip" title="Facebook"><i class="mdi mdi-facebook-box"></i></a>
         <!-- item-->
         <a href="" class="link" data-toggle="tooltip" title="Email"><i class="mdi mdi-gmail"></i></a>
         <!-- item-->
-        <a href="" class="link" data-toggle="tooltip" title="Logout"><i class="mdi mdi-power"></i></a>
+        <a href="" class="link" data-toggle="tooltip" title="Twitter"><i class="mdi mdi-twitter-box"></i></a>
     </div>
     <!-- End Bottom points-->
 </aside>
